chibi now bounces & fixed loader not showing

--- a/funky.css
+++ b/funky.css
@@ -100,6 +100,7 @@ body {
     opacity: 1;
     transition: all 0.5s ease;
     overflow: hidden;
+    z-index: 99;
 }
 
 .loader-wrapper {
